--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   bloc: ^9.0.0
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
