--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_screenutil: ^5.9.3
   bloc: ^9.0.0
   firebase_core: ^3.12.1
+  shared_preferences: ^2.5.2
+  flutter_bloc: ^9.1.0
+  get_it: ^8.0.3
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
