--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_it: ^8.0.3
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  firebase_auth: ^5.5.1
+  intl_phone_field: ^3.2.0
+  country_code_picker: ^3.2.0
 
 dev_dependencies:
   flutter_test:
