--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-firebase_authentication.darts
+.env.dev
 
 # Symbolication related
 app.*.symbols
