--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+lib/core/service/firebase/firebase_authentication.dart
 .env.dev
 
 # Symbolication related
