--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   country_code_picker: ^3.2.0
   supabase_flutter: ^2.8.4
   flutter_dotenv: ^5.2.1
+  image_picker: ^1.1.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/svgs/
+    - .env.dev
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
