--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_dotenv: ^5.2.1
   image_picker: ^1.1.2
   http: ^1.3.0
+  image: ^4.5.4
+  image_cropper: ^9.1.0
+  extended_image: ^10.0.0
 
 dev_dependencies:
   flutter_test:
