--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   image: ^4.5.4
   image_cropper: ^9.1.0
   extended_image: ^10.0.0
+  shimmer: ^3.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
