--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   extended_image: ^10.0.0
   shimmer: ^3.0.0
   equatable: ^2.0.7
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
