--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   shimmer: ^3.0.0
   equatable: ^2.0.7
   intl: ^0.20.2
+  uuid: ^4.5.1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
