--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   collection: ^1.19.1
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.1.0
+  dio: ^5.8.0+1
+  googleapis_auth: ^2.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
